{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 43,
  "lineage": "904dbe66-9005-d8f3-5b68-7829a5c54a36",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dbserver-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/dbserver-nic",
            "internal_domain_name_suffix": "5mwor2ai053elarjga3luvm0wf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "dbserver-nic1",
                "primary": true,
                "private_ip_address": "10.0.0.70",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/dbserver-pip",
                "subnet_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/internal"
              }
            ],
            "location": "westus2",
            "name": "dbserver-nic",
            "private_ip_address": "10.0.0.70",
            "private_ip_addresses": [
              "10.0.0.70"
            ],
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_public_ip.dbserverpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fortianalyzer-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/fortianalyzer-nic1",
            "internal_domain_name_suffix": "5mwor2ai053elarjga3luvm0wf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "faz-nic1",
                "primary": true,
                "private_ip_address": "10.0.0.7",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/fortianalyzer-pip",
                "subnet_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/external"
              }
            ],
            "location": "westus2",
            "name": "fortianalyzer-nic1",
            "private_ip_address": "10.0.0.7",
            "private_ip_addresses": [
              "10.0.0.7"
            ],
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_public_ip.fortianalyzerpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.external",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fweb-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/fweb-nic1",
            "internal_domain_name_suffix": "5mwor2ai053elarjga3luvm0wf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fweb-external",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/publicip-fweb",
                "subnet_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/external"
              }
            ],
            "location": "westus2",
            "name": "fweb-nic1",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_public_ip.fwebpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.external",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "fweb-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/fweb-nic2",
            "internal_domain_name_suffix": "5mwor2ai053elarjga3luvm0wf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "fweb-internal",
                "primary": true,
                "private_ip_address": "10.0.0.68",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/internal"
              }
            ],
            "location": "westus2",
            "name": "fweb-nic2",
            "private_ip_address": "10.0.0.68",
            "private_ip_addresses": [
              "10.0.0.68"
            ],
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webserver-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/webserver-nic1",
            "internal_domain_name_suffix": "5mwor2ai053elarjga3luvm0wf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "webserver-nic1",
                "primary": true,
                "private_ip_address": "10.0.0.69",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/webserver-pip",
                "subnet_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/internal"
              }
            ],
            "location": "westus2",
            "name": "webserver-nic1",
            "private_ip_address": "10.0.0.69",
            "private_ip_addresses": [
              "10.0.0.69"
            ],
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_public_ip.webserverpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windowsclient-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/windowsclient-internal",
            "internal_domain_name_suffix": "5mwor2ai053elarjga3luvm0wf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "windowsclient-nic1",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/publicip-windowsclient",
                "subnet_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/external"
              }
            ],
            "location": "westus2",
            "name": "windowsclient-internal",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_public_ip.windowsclientpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.external",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "windowsserver-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/windowsserver-nic1",
            "internal_domain_name_suffix": "5mwor2ai053elarjga3luvm0wf.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "windowsserver-nic1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/publicip-windowsserver",
                "subnet_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/external"
              }
            ],
            "location": "westus2",
            "name": "windowsserver-nic1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_public_ip.winserverpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.external",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "connect_dbserver_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/dbserver-nic|/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkSecurityGroups/dbserver-nsg",
            "network_interface_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/dbserver-nic",
            "network_security_group_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkSecurityGroups/dbserver-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.dbserver-nic1",
            "azurerm_network_security_group.dbserver_nsg",
            "azurerm_public_ip.dbserverpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "connect_webserver_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/webserver-nic1|/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg",
            "network_interface_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkInterfaces/webserver-nic1",
            "network_security_group_id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.webserver-nic1",
            "azurerm_network_security_group.webserver_nsg",
            "azurerm_public_ip.webserverpublicip",
            "azurerm_resource_group.resourcegroup",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dbserver_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkSecurityGroups/dbserver-nsg",
            "location": "westus2",
            "name": "dbserver-nsg",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "All-OUT",
                "priority": 1001,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkSecurityGroups/fwb-sg",
            "location": "westus2",
            "name": "fwb-sg",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "all_inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "all_outbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "webserver_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg",
            "location": "westus2",
            "name": "webserver-nsg",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "All-OUT",
                "priority": 1001,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_ssh",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow_http",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dbserverpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/dbserver-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.230.133.145",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "dbserver-pip",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fortianalyzerpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/fortianalyzer-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.230.201.90",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "fortianalyzer-pip",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fwebpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/publicip-fweb",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.230.132.245",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "publicip-fweb",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "webserverpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/webserver-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.230.134.118",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "webserver-pip",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "windowsclientpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/publicip-windowsclient",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.230.201.88",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "publicip-windowsclient",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "winserverpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/publicIPAddresses/publicip-windowsserver",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.230.201.143",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "publicip-windowsserver",
            "resource_group_name": "cse-ztna-lab-rg0622",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "external",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/external",
            "name": "external",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cse-ztna-lab-rg0622",
            "virtual_network_name": "lab-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.64/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cse-ztna-lab-rg0622",
            "virtual_network_name": "lab-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f0e82cfb-d708-45fa-8229-303aba559ab5",
            "id": "/subscriptions/cf72478e-c3b0-4072-8f60-41d037c1d9e9/resourceGroups/cse-ztna-lab-rg0622/providers/Microsoft.Network/virtualNetworks/lab-vnet",
            "location": "westus2",
            "name": "lab-vnet",
            "resource_group_name": "cse-ztna-lab-rg0622"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup"
          ]
        }
      ]
    }
  ]
}